# Vision_Language_Models_Notebooks

./: README.md  pyproject.toml
notebooks/: 01_01_word2vec_with_sub_sampling_and_negative_sampling_in_pytorch.ipynb
